[package]
name = "imxrt-enet"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "ENET driver for NXP's i.MX RT MCUs"
repository = "https://github.com/imxrt-rs/imxrt-enet"
readme = "README.md"
keywords = ["imxrt", "nxp", "network", "ethernet", "smoltcp"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]

[dependencies]
imxrt-ral = ">=0.5,<=0.6"
mdio = "0.1"
defmt = { version = "1.0", optional = true }

[dependencies.smoltcp]
version = ">=0.12,<=0.13"
default-features = false
features = [
    "medium-ethernet",
    "proto-ipv4",
]

[dev-dependencies]
static_cell = "2.1"

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
features = ["imxrt-ral/imxrt1062", "smoltcp/socket-udp"]
